--- a/css/bar.tablet.css
+++ b/css/bar.tablet.css
@@ -7,17 +7,26 @@
   /* ---------- header ---------- */
   header {
     width: 100%;
-    height: 80px;
+    height: 5.5rem;
     background-color: #f0c77b;
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: fixed;
     top: 0px;
-    box-sizing: border-box;
-    padding: 0px 50px;
     z-index: 100;
     opacity: 0;
+  }
+  .headerWrap {
+    width: 90%;
+    height: 100%;
+    margin: 0px auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .moGnb {
+    display: none;
   }
   header h1 img {
     width: 140px;
@@ -29,9 +38,31 @@
   header li {
     font-family: "Bebas Neue", sans-serif;
     font-size: 32px;
+    position: relative;
   }
   .bar {
     display: none;
+  }
+
+  header li .pick {
+    width: 0%;
+    height: 5px;
+    background-color: #d70204;
+    position: absolute;
+    left: 50%;
+    bottom: -8px;
+    transform: translateX(-50%);
+    border-radius: 5px;
+  }
+  header .pickon {
+    width: 130%;
+    height: 5px;
+    background-color: #d70204;
+    position: absolute;
+    left: 50%;
+    bottom: -8px;
+    transform: translateX(-50%);
+    border-radius: 5px;
   }
 
   /* ---------- visual ---------- */
@@ -337,5 +368,18 @@
   .policy a {
     color: white;
     font-size: 13px;
+  }
+  .policy li {
+    position: relative;
+  }
+  .policy .pick2 {
+    width: 0%;
+    height: 2px;
+    background-color: white;
+    position: absolute;
+    left: 50%;
+    bottom: -8px;
+    transform: translateX(-50%);
+    border-radius: 5px;
   }
 }
