--- a/css/food.pc.css
+++ b/css/food.pc.css
@@ -9,15 +9,21 @@
     width: 100%;
     height: 80px;
     background-color: #f0c77b;
+    position: fixed;
+    top: 0px;
+    z-index: 100;
+    opacity: 0;
+  }
+  .headerWrap {
+    width: 90%;
+    height: 100%;
+    margin: 0px auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: fixed;
-    top: 0px;
-    box-sizing: border-box;
-    padding: 0px 50px;
-    z-index: 100;
-    opacity: 0;
+  }
+  .moGnb {
+    display: none;
   }
   header h1 img {
     width: 140px;
@@ -29,11 +35,32 @@
   header li {
     font-family: "Bebas Neue", sans-serif;
     font-size: 32px;
+    position: relative;
   }
   .bar {
     display: none;
   }
 
+  header li .pick {
+    width: 0%;
+    height: 5px;
+    background-color: #d70204;
+    position: absolute;
+    left: 50%;
+    bottom: -8px;
+    transform: translateX(-50%);
+    border-radius: 5px;
+  }
+  header .pickon {
+    width: 130%;
+    height: 5px;
+    background-color: #d70204;
+    position: absolute;
+    left: 50%;
+    bottom: -8px;
+    transform: translateX(-50%);
+    border-radius: 5px;
+  }
   /* ---------- visual ---------- */
   #visual {
     width: 100%;
@@ -327,5 +354,18 @@
   .policy a {
     color: white;
     font-size: 13px;
+  }
+  .policy li {
+    position: relative;
+  }
+  .policy .pick2 {
+    width: 0%;
+    height: 2px;
+    background-color: white;
+    position: absolute;
+    left: 50%;
+    bottom: -8px;
+    transform: translateX(-50%);
+    border-radius: 5px;
   }
 }
