--- a/css/story.mo.css
+++ b/css/story.mo.css
@@ -7,17 +7,20 @@
   /* ---------- header ---------- */
   header {
     width: 100%;
-    height: 80px;
+    height: 5.5rem;
     background-color: #f0c77b;
+    position: fixed;
+    top: 0px;
+    z-index: 100;
+    opacity: 0;
+  }
+  .headerWrap {
+    width: 90%;
+    height: 100%;
+    margin: 0px auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: fixed;
-    top: 0px;
-    box-sizing: border-box;
-    padding: 0px 50px;
-    z-index: 100;
-    opacity: 0;
   }
   header h1 img {
     width: 100px;
@@ -27,6 +30,24 @@
   }
   .bar {
     font-size: 23px;
+  }
+  .moGnb {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 25px;
+    background-color: #f0c77b;
+    display: none;
+  }
+  .moGnb li {
+    height: 50px;
+    line-height: 50px;
+    border-top: 3px solid #d8a953;
+  }
+  .moGnb li:last-child {
+    border-bottom: 3px solid #d8a953;
   }
 
   /* ---------- visual ---------- */
@@ -310,5 +331,18 @@
   .policy a {
     color: white;
     font-size: 13px;
+  }
+  .policy li {
+    position: relative;
+  }
+  .policy .pick2 {
+    width: 0%;
+    height: 2px;
+    background-color: white;
+    position: absolute;
+    left: 50%;
+    bottom: -8px;
+    transform: translateX(-50%);
+    border-radius: 5px;
   }
 }
