--- a/css/store.mo.css
+++ b/css/store.mo.css
@@ -70,6 +70,70 @@
     letter-spacing: 3px;
   }
 
+  /* ---------- con1 ---------- */
+  #con1 {
+    width: 100%;
+    height: 300px;
+    margin-top: 100px;
+    background-image: url(../img/store_con1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: "Bebas Neue", sans-serif;
+  }
+  #con1 h2 {
+    box-sizing: border-box;
+    padding-top: 60px;
+    text-align: center;
+    font-size: 40px;
+    line-height: 40px;
+    color: white;
+  }
+  #con1 ul {
+    width: 200px;
+    margin: 0px auto;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  #con1 input {
+    width: 200px;
+    height: 21px;
+    background-repeat: no-repeat;
+    border: 1px solid #555;
+    padding: 5px 5px;
+    border-radius: 3px;
+  }
+  #con1 input::-webkit-input-placeholder {
+    background-image: url(../img/placeholder.png);
+    background-size: contain;
+    background-position: 1px center;
+    background-position: 180px;
+    background-repeat: no-repeat;
+    text-align: left;
+    text-indent: 0;
+  }
+  #con1 .loca {
+    width: 210px;
+    height: 30px;
+    line-height: 30px;
+    border: 1px solid white;
+    border-radius: 3px;
+    text-align: center;
+  }
+  #con1 a {
+    width: 100%;
+    height: 100%;
+    display: block;
+    color: white;
+  }
+  #con1 i {
+    margin-left: 7px;
+    font-size: 13px;
+  }
+
   /* ---------- popup ---------- */
 
   #popup {
@@ -94,7 +158,7 @@
     display: none;
   }
   #popup button {
-    margin-left: 300px;
+    margin-left: 95%;
     border: 1px solid black;
     border-radius: 3px;
     padding: 3px 8px;
@@ -133,6 +197,9 @@
   #popup .info li {
     margin-bottom: 1rem;
     font-size: 14px;
+  }
+  #popup img {
+    width: 90%;
   }
 
   /* ---------- con2 ---------- */
