--- a/css/store.pc.css
+++ b/css/store.pc.css
@@ -81,6 +81,66 @@
     letter-spacing: 3px;
   }
 
+  /* ---------- con1 ---------- */
+  #con1 {
+    width: 100%;
+    height: 300px;
+    margin-top: 100px;
+    background-image: url(../img/store_con1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: "Bebas Neue", sans-serif;
+  }
+  #con1 h2 {
+    box-sizing: border-box;
+    padding-top: 55px;
+    text-align: center;
+    font-size: 70px;
+    line-height: 70px;
+    color: white;
+  }
+  #con1 ul {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+  }
+  #con1 input {
+    width: 200px;
+    height: 21px;
+    background-repeat: no-repeat;
+    border: 1px solid #555;
+    padding: 5px 5px;
+    border-radius: 3px;
+  }
+  #con1 input::-webkit-input-placeholder {
+    background-image: url(../img/placeholder.png);
+    background-size: contain;
+    background-position: 1px center;
+    background-position: 180px;
+    background-repeat: no-repeat;
+    text-align: left;
+    text-indent: 0;
+  }
+  #con1 .loca {
+    width: 200px;
+    height: 30px;
+    line-height: 30px;
+    border: 1px solid white;
+    border-radius: 3px;
+    text-align: center;
+  }
+  #con1 a {
+    width: 100%;
+    height: 100%;
+    display: block;
+    color: white;
+  }
+  #con1 i {
+    margin-left: 7px;
+    font-size: 13px;
+  }
   /* ---------- popup ---------- */
   #popup {
     width: 900px;
