--- a/css/index.tablet.css
+++ b/css/index.tablet.css
@@ -136,33 +136,33 @@
   .con1Bottom {
     margin-top: 0.7rem;
   }
-  #con1 .con1Top li:nth-child(1) {
+  .con1Top li:nth-child(1) {
     width: calc(100% / 2 - 0.7rem);
     background-image: url(../img/index_con1_1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
   }
-  #con1 .con1Top li:nth-child(2) {
+  .con1Top li:nth-child(2) {
     width: calc(100% / 4 - 0.7rem);
     background-image: url(../img/index_con1_2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
   }
-  #con1 .con1Top li:nth-child(3) {
+  .con1Top li:nth-child(3) {
     width: calc(100% / 4 - 0.7rem);
     background-color: white;
     text-align: center;
   }
-  #con1 .con1Top li:nth-child(3) h3 {
+  .con1Top li:nth-child(3) h3 {
     font-size: 30px;
     line-height: 40px;
     letter-spacing: 3px;
     font-weight: 900;
     margin-top: 1.5rem;
   }
-  #con1 .con1Top li:nth-child(3) div {
+  .con1Top li:nth-child(3) div {
     width: 140px;
     height: 40px;
     line-height: 40px;
@@ -174,32 +174,32 @@
     border-radius: 7px;
     letter-spacing: 1px;
   }
-  #con1 .con1Bottom li:nth-child(1) {
+  .con1Bottom li:nth-child(1) {
     width: calc(100% / 4 - 0.7rem);
     background-image: url(../img/index_con1_3.JPG);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
   }
-  #con1 .con1Bottom li:nth-child(2) {
+  .con1Bottom li:nth-child(2) {
     width: calc(100% / 4 - 0.7rem);
     background-color: #d70204;
     text-align: center;
   }
-  #con1 .con1Bottom li:nth-child(2) h4 {
+  .con1Bottom li:nth-child(2) h4 {
     color: white;
     font-size: 30px;
     letter-spacing: 3px;
     margin-top: 1.2rem;
   }
-  #con1 .con1Bottom li:nth-child(2) p {
+  .con1Bottom li:nth-child(2) p {
     margin-top: 0.2rem;
     font-family: "Open Sans", serif;
     font-size: 13px;
     font-weight: 400;
     color: white;
   }
-  #con1 .con1Bottom li:nth-child(2) div {
+  .con1Bottom li:nth-child(2) div {
     width: 100px;
     height: 30px;
     line-height: 33px;
@@ -209,7 +209,7 @@
     font-size: 20px;
     color: #d70204;
   }
-  #con1 .con1Bottom li:nth-child(3) {
+  .con1Bottom li:nth-child(3) {
     width: calc(100% / 2 - 0.7rem);
     background-image: url(../img/index_con1_4.JPG);
     background-repeat: no-repeat;
@@ -225,7 +225,7 @@
     position: relative;
   }
   /* food img */
-  #con2 ul {
+  .foodList {
     width: 120%;
     display: flex;
     align-items: center;
@@ -235,22 +235,28 @@
     left: 50%;
     transform: translateX(-50%);
   }
-  #con2 li:nth-child(1) img {
+  .foodList li:nth-child(1) img {
     width: 240px;
   }
-  #con2 li:nth-child(2) img {
+  .foodList li:nth-child(2) img {
     width: 320px;
   }
-  #con2 li:nth-child(3) img {
+  .foodList li:nth-child(3) img {
     width: 240px;
   }
   /* txt */
-  .con2txt {
+  w .con2txt {
+    width: 250%;
+    display: flex;
+    justify-content: space-between;
     text-align: center;
     position: absolute;
     bottom: 1rem;
     left: 50%;
     transform: translateX(-50%);
+  }
+  .con2txt li {
+    width: calc(100% / 3);
   }
   .con2txt h4 {
     font-size: 22px;
@@ -328,6 +334,51 @@
   }
   #con3 img {
     width: 100%;
+  }
+  /* imgbox */
+  .imgBox {
+    position: relative;
+    overflow: hidden;
+    transition: 0.5s;
+  }
+  .imgBox::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: #f0c77b;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    transition: 0.7s;
+    transition-delay: 0.4s;
+    z-index: 2;
+  }
+  .imgBox::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: #d70204;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    transition: 0.7s;
+    z-index: 3;
+  }
+  /* active */
+  .imgBox.active::before {
+    height: 0;
+  }
+  .imgBox.active::after {
+    height: 0;
+  }
+  .textBox p {
+    opacity: 0;
+    transition: 0.8s;
+    margin: 50px 0;
+  }
+  .textBox.active p {
+    opacity: 1;
+    margin: 0;
   }
 
   /* con4 */
